--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/dom-view-transitions": "^1.0.5",
+    "dedent": "^1.5.3",
     "framer-motion": "^11.3.28",
     "next": "14.2.5",
     "react": "^18",
